--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,14 @@ jobs:
         distribution: temurin
         java-version: 20
 
-    - name: Grant
+    - name: Grant execute permission for Gradle wrapper
+      run: chmod +x gradlew
+
+    - name: Build Plugin JAR
+      run: ./gradlew build
+
+    - name: Archive JAR
+      uses: actions/upload-artifact@v3
+      with:
+        name: HybridSurvivalPlugin
+        path: build/libs/*.jar
