--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,10 @@ plugins {
 group = 'de.yourplugin.hybrid'
 version = '1.0'
 
-sourceCompatibility = '20'
-targetCompatibility = '20'
+java {
+    sourceCompatibility = JavaVersion.VERSION_20
+    targetCompatibility = JavaVersion.VERSION_20
+}
 
 repositories {
     mavenCentral()
