--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
     mavenCentral()
     maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
+    maven { url = 'https://maven.enginehub.org/repo/' } // EngineHub für WorldEdit
 }
 
 dependencies {
