Aktualisieren von build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -4,29 +4,34 @@ plugins {
 
 group = 'de.yourplugin.hybrid'
 version = '1.0'
+description = 'Hybrid Survival Worldgen with Arnis integration'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_20
-    targetCompatibility = JavaVersion.VERSION_20
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 repositories {
     mavenCentral()
-    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-    maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
-    maven { url = 'https://maven.enginehub.org/repo/' } // EngineHub für WorldEdit
+    maven {
+        name = 'papermc'
+        url = 'https://repo.papermc.io/repository/maven-public/'
+    }
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'
-    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.2.11'
+    compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.sk89q.worldedit:worldedit-bukkit:7.2.14' // optional, adjust to your WE version
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
 jar {
     archiveBaseName.set('HybridSurvivalPlugin')
-    from(sourceSets.main.output)
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    // If you want a single fat jar include a shadow plugin; left out intentionally.
 }
