--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,34 @@
-name: Build HybridSurvivalPlugin
+plugins {
+    id 'java'
+}
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+group = 'de.yourplugin'
+version = '1.0-SNAPSHOT'
+sourceCompatibility = '21'
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+repositories {
+    mavenCentral()
+    maven {
+        name = 'papermc'
+        url = 'https://repo.papermc.io/repository/maven-public/'
+    }
+    maven {
+        name = 'enginehub'
+        url = 'https://maven.enginehub.org/repo/'
+    }
+}
 
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+dependencies {
+    // Paper API (falls du Paper nutzt)
+    compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
 
-    - name: Set up JDK 20
-      uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 20
+    // WorldEdit Bukkit
+    implementation 'com.sk89q.worldedit:worldedit-bukkit:7.2.15'
 
-    - name: Build Plugin JAR
-      run: gradle build
+    // Optional: WorldEdit Core falls benötigt
+    implementation 'com.sk89q.worldedit:worldedit-core:7.2.15'
+}
 
-    - name: Archive JAR
-      uses: actions/upload-artifact@v4
-      with:
-        name: HybridSurvivalPlugin
-        path: build/libs/*.jar
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
