--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,15 +1,22 @@
-name: HybridSurvivalPlugin
+name: HybridSurvival
+version: 1.0.0
 main: de.yourplugin.hybrid.HybridSurvivalConfigPlugin
-version: 1.0
-api-version: 1.20
+api-version: 1.21
+author: yourname
+description: >
+  Hybrid Survival Plugin mit Arnis-Integration, Building-System und optionalen Dekorationen (Lampen, Bäume, Bänke).
+website: https://github.com/Ilikeminecraftservers/Worldgen
 
 commands:
-  building:
-    description: Kauf, Verkauf und Verwaltung von Gebäuden
-    usage: /building <buy|sell|info|teleport> [Adresse]
-    permission: hybrid.building
-
-permissions:
-  hybrid.building:
-    description: Berechtigt Gebäude zu kaufen oder zu verkaufen
-    default: true
+  buybuilding:
+    description: Kaufe ein Gebäude, wenn du davorstehst
+    usage: /<command>
+  sellbuilding:
+    description: Verkaufe dein Gebäude
+    usage: /<command>
+  tpbuilding:
+    description: Teleportiere dich zu einem Gebäude per Adresse
+    usage: /<command> <Adresse>
+  listbuildings:
+    description: Zeigt eine Liste aller Gebäude
+    usage: /<command>
