--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,22 +1,38 @@
-name: HybridSurvival
-version: 1.0.0
+name: HybridSurvivalConfig
 main: de.yourplugin.hybrid.HybridSurvivalConfigPlugin
+version: 1.0.0
 api-version: 1.21
-author: yourname
-description: >
-  Hybrid Survival Plugin mit Arnis-Integration, Building-System und optionalen Dekorationen (Lampen, Bäume, Bänke).
-website: https://github.com/Ilikeminecraftservers/Worldgen
+author: YourName
+description: Hybrid Survival Plugin mit Auto-Arnis-Generierung, Gebäude-Handling und Commands
 
 commands:
   buybuilding:
-    description: Kaufe ein Gebäude, wenn du davorstehst
-    usage: /<command>
+    description: Kaufe ein Gebäude
+    usage: /buybuilding <Adresse>
+    permission: hybridsurvival.buy
   sellbuilding:
     description: Verkaufe dein Gebäude
-    usage: /<command>
+    usage: /sellbuilding <Adresse>
+    permission: hybridsurvival.sell
   tpbuilding:
-    description: Teleportiere dich zu einem Gebäude per Adresse
-    usage: /<command> <Adresse>
+    description: Teleportiere dich zu einem Gebäude
+    usage: /tpbuilding <Adresse>
+    permission: hybridsurvival.tp
   listbuildings:
-    description: Zeigt eine Liste aller Gebäude
-    usage: /<command>
+    description: Zeige eine Liste aller Gebäude
+    usage: /listbuildings
+    permission: hybridsurvival.list
+
+permissions:
+  hybridsurvival.buy:
+    description: Erlaubt das Kaufen von Gebäuden
+    default: true
+  hybridsurvival.sell:
+    description: Erlaubt das Verkaufen von Gebäuden
+    default: true
+  hybridsurvival.tp:
+    description: Erlaubt das Teleportieren zu Gebäuden
+    default: op
+  hybridsurvival.list:
+    description: Erlaubt das Anzeigen der Gebäudeliste
+    default: true
