--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -2,7 +2,7 @@ name: HybridSurvivalConfig
 main: de.yourplugin.hybrid.HybridSurvivalConfigPlugin
 version: 1.0.0
 api-version: 1.21
-author: YourName
+author: dwuptpuma
 description: Hybrid Survival Plugin mit Auto-Arnis-Generierung, Gebäude-Handling und Commands
 
 commands:
