--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,17 +1,21 @@
+# ============================================
+# Hybrid Survival Plugin - Konfiguration
+# ============================================
+
 # ===== Kern-Features =====
-progressive-detail: true
-chunk-preload: true
-lazy-light: true
-rpc-threading: true
-paste-threading: true
+progressive-detail: true         # Mehrere Detailstufen bei Arnis-Generierung
+chunk-preload: true              # Chunks im Umkreis des Spielers vorladen
+lazy-light: true                 # Lichtupdates verzögert ausführen
+rpc-threading: true              # RPC-Aufrufe asynchron ausführen
+paste-threading: true            # WorldEdit-Pasten asynchron ausführen
 
 # ===== Gebäude & Immobilien =====
-generate-buildings: true
-building-purchase: true
-sign-purchase: true
-osm-interiors: false
-shop-system: false
-synchronize-height: true
+generate-buildings: true         # Gebäude beim Chunk-Load generieren
+building-purchase: true          # Gebäude können gekauft werden
+sign-purchase: true              # Kauf über Schilder möglich
+osm-interiors: false             # Interieur aus OSM generieren
+shop-system: false               # Shopsystem aktivieren
+synchronize-height: true         # Bauhöhe mit Welt-Höhe synchronisieren
 
 # ===== Arnis-Integration =====
 arnis:
@@ -33,15 +37,25 @@ parkings:
   enabled: true
   block: PACKED_ICE              # Material für Parkflächen
   line-block: ICE                # Material für Parkplatzmarkierungen
-  slot-size: 3x6                 # Größe eines Parkplatz-Slots (Breite x Länge)
+  slot-size: "3x6"               # Größe eines Parkplatz-Slots (Breite x Länge)
 
 # ===== Dekorationen & Infrastruktur =====
 decorations:
   street-lamps:
     enabled: false
-    schematic-path: schematics/lamps/ # Ordner mit Schem-Dateien
+    schematic-path: schematics/lamps/   # Ordner mit Schem-Dateien
   trees:
     enabled: false
-    schematic-path: schematics/trees/
+    schematic-path: schematics/trees/   # Ordner mit Schem-Dateien
   benches:
     enabled: false
+    schematic-path: schematics/benches/ # Ordner mit Schem-Dateien
+
+# ===== Performance =====
+max-chunks-per-tick: 16          # Max. Chunks pro Tick laden
+lights-per-tick: 2               # Anzahl Lichtupdates pro Tick
+preload-radius: 16               # Umkreis zum Vorladen von Chunks
+async-events: true               # Events asynchron behandeln
+telemetry: true                  # Telemetrie aktivieren
+chunk-cache: true                # Cache für Arnis-Daten aktivieren
+prefetch-spawn: true             # Spawn-Bereich beim Start laden
