--- a/build.gradle
+++ b/build.gradle
@@ -4,30 +4,59 @@ plugins {
 
 group = 'de.yourplugin.hybrid'
 version = '1.0.0'
-description = 'Hybrid Survival Plugin'
+description = 'Hybrid Survival Plugin mit Arnis-Integration'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(21) // Paper 1.21.4 benötigt Java 21
     }
 }
 
 repositories {
     mavenCentral()
-    maven { url = 'https://maven.enginehub.org/repo/' }
-    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
+
+    // Paper API
+    maven {
+        name = "papermc"
+        url = "https://repo.papermc.io/repository/maven-public/"
+    }
+
+    // EngineHub (WorldEdit & WorldGuard)
+    maven {
+        name = "enginehub"
+        url = "https://maven.enginehub.org/repo/"
+    }
 }
 
 dependencies {
-    compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
-    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.3.0'
+    // Paper API (compileOnly, Plugin läuft nur im Server)
+    compileOnly "io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT"
+
+    // WorldEdit API (compileOnly)
+    compileOnly "com.sk89q.worldedit:worldedit-bukkit:7.2.14"
+
+    // Lombok (falls du es nutzen willst)
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    // Test Dependencies
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
+tasks.test {
+    useJUnitPlatform()
+}
+
 jar {
-    archiveBaseName.set('HybridSurvivalPlugin')
+    archiveBaseName.set("HybridSurvivalPlugin")
+    archiveVersion.set(version)
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
